overflow handling, wrap fixed

--- a/clicker.scss
+++ b/clicker.scss
@@ -110,7 +110,7 @@ button.allbutton:focus {
 
 #ConfigureMenu {
     display: flex;
-    flex-flow: column wrap;
+    flex-flow: column nowrap;
 
     * {
         width: 100%;
